assets/less/app.less
/* ... */
.flex-caption {color: @body-bg; width: 40%; padding: 10px; margin: 0 0 60px 60px; background-color: #222; background: rgba(0,0,0,.8); position: absolute; display: block; left: 0; bottom: 0; border-left: 4px solid @brand-sdss; }
.sdss-docs-section {padding-left: 1em; margin-bottom: 3.5em;}
figcaption{font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;}

.responsive-video { position: relative; padding-bottom: 56.25%; padding-top: 60px; overflow: hidden; margin: 1em 0em 2em 0em;}

.responsive-video iframe, .responsive-video object, .responsive-video embed {position: absolute; top: 0; left: 0; width: 100%; height: 100%; }

#classic p {
font-size: 85%;
}

/* ==========================================================================
   Table-hover fix for spanning rows and columns. Insert blank rows and columns. 
   Give them the class "rowspan start", "rowspan next" or "rowspan last".
   <td class="rowspan 3 start">&nbsp;</td>, etc.
   Same for colspan.
   ========================================================================== */
table.table-hover td.rowspan.first {
	border-bottom-color:transparent;
}
table.table-hover td.rowspan.next {
	border-top-color:transparent;
	border-bottom-color:transparent;
}
table.table-hover td.rowspan.last {
	border-top-color:transparent;
}
table.table-hover td.colspan.first {
	border-right-color:transparent;
}
table.table-hover td.colspan.next {
	border-left-color:transparent;
	border-right-color:transparent;
}
table.table-hover td.colspan.last {
	border-left-color:transparent;
}


/* ==========================================================================
   Primary Content
   ========================================================================== */

.main { }


.survey, .survey-2{width:250px; height:250px; margin:10px auto; border-radius:250px; border:5px solid #fff; box-shadow:0px 0px 3px #aaa; text-align:center; -webkit-transition:border 1s ease; -moz-transition:border 1s ease; -o-transition:border 1s ease; transition:border 1s ease;  }

.survey-img-1 {background: url(/wp-content/uploads/2014/06/apogee.jpg) no-repeat; background-size: cover; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-position: 30% 50%;}
.survey-img-2 {background: url(/wp-content/uploads/2014/06/boss.jpg) no-repeat; background-size: cover; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-position: 30% 50%;}
.survey-img-3 {background: url(/wp-content/uploads/2014/06/feature_manga_2-1.png) no-repeat; background-size: cover; -webkit-background-size: cover; -moz-background-size: cover; -o-bakground-size: cover; background-position: 55% 1%;}
.survey-img-4 {background: url(/wp-content/uploads/2014/06/faceplat.jpg) no-repeat top center; background-size: cover; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; }

.survey:hover{border: 5px solid @brand-sdss; -webkit-transition:border 1s ease; -moz-transition:border 1s ease; -o-transition:border 1s ease; transition:border 1s ease; }
.survey-2:hover{border: 5px solid @brand-sdss-footer; -webkit-transition:border 1s ease; -moz-transition:border 1s ease; -o-transition:border 1s ease; transition:border 1s ease; }
.survey-description{width:95%; margin:20% auto; padding-top:15px; color: #fff; text-shadow: 2px 2px 3px rgba(0,0,0,.9); 
.btn {text-shadow: none;}

}


/* Gallery Shortcode */
.gallery-row { padding: 15px 0; }

.ch-grid {margin: 20px 0 0 0; padding: 0; list-style: none; display: block; text-align: center; width: 100%; 
 & li {width: 220px; height: 220px; display: inline-block; margin: 20px; } 
 } 
.ch-grid:after, .ch-item:before {content: ''; display: table; } 
.ch-grid:after {clear: both; } 

.ch-item {width: 100%; height: 100%; border-radius: 50%; position: relative; cursor: default; -webkit-perspective: 900px; -moz-perspective: 900px; -o-perspective: 900px; -ms-perspective: 900px; perspective: 900px; } 

.ch-img {
  &-1 {background-image: url(/wp-content/uploads/2014/06/boss.jpg); }
  &-2 {background-image: url(/wp-content/uploads/2014/06/segue.jpg); background-position: 20% 65% !important; }
  &-3 {background-image: url(/wp-content/uploads/2014/06/apogee.jpg);}
  &-4 {background-image: url(/wp-content/uploads/2014/06/feature_manga_2.jpg);}
}

.ch-info  { position: absolute; width: 100%; height: 100%; -webkit-transform-style: preserve-3d; -moz-transform-style: preserve-3d; -o-transform-style: preserve-3d; -ms-transform-style: preserve-3d; transform-style: preserve-3d; 

     & .ch-info-front {box-shadow: inset 0 0 0 16px rgba(0,0,0,0.3); }
     & .ch-info-back {-webkit-transform: translate3d(0,0,-220px) rotate3d(1,0,0,90deg); -moz-transform: translate3d(0,0,-220px) rotate3d(1,0,0,90deg); -o-transform: translate3d(0,0,-220px) rotate3d(1,0,0,90deg); -ms-transform: translate3d(0,0,-220px) rotate3d(1,0,0,90deg); transform: translate3d(0,0,-220px) rotate3d(1,0,0,90deg); background: #000; opacity: 0; }
     & h3 {letter-spacing: 2px; margin: 0 15px; padding: 40% 0 0 0; height: 110px; text-shadow: 0 0 1px #fff, 0 1px 2px rgba(0,0,0,0.3); }
     & a:hover {color: @brand-sdss; color: rgba(102, 0, 255, .8); }
     & > div {display: block; position: absolute; width: 100%; height: 100%; border-radius: 50%; background-position: center center; -webkit-transition: all 0.4s linear; -moz-transition: all 0.4s linear; -o-transition: all 0.4s linear; -ms-transition: all 0.4s linear; transition: all 0.4s linear; -webkit-transform-origin: 50% 0%; -moz-transform-origin: 50% 0%; -o-transform-origin: 50% 0%; -ms-transform-origin: 50% 0%; transform-origin: 50% 0%; }
}
/* ... */

